# ChatLab

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/core/: config.py
backend/routers/: chat.py
backend/schemas/: chat.py
backend/services/: llm_service.py
backend/tools/: __init__.py  chat_tools.py
docs/lessons/: 00_초기설정.md  01_메시지전송.md  02_Tool이해.md  03_Tool만들기.md  04_Agent.md  05_RAG이해.md  index.md
frontend/: app.py  chat.py  docs.py
http/: message.http  tool_message.http
