[project]
name = "chatlab"
version = "0.1.0"
description = "Step-by-step chatbot lab with Streamlit, FastAPI, LangChain, tools, agents, and RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "streamlit>=1.57.0",
    "requests>=2.33.1",
    "python-dotenv>=1.2.2",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langsmith>=0.8.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
